--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</header>
 		<main>
 			<section class="main-section">
-				<div class="container">
+				<div class="container main-section-settings">
 					<h1 class="main-section-title">
 						Effective Solutions for Your Business
 					</h1>
@@ -63,14 +63,24 @@
 				<div class="container">
 					<h2 class="visually-hidden">Second Section</h2>
 					<ul class="card-set">
-						<li class="item">
+						<li class="strong-side">
+							<div class="icon-bg">
+								<svg class="strong-side-icon" width="64" height="64">
+									<use href="./images/icons.svg#icon-antenna-1"></use>
+								</svg>
+							</div>
 							<h3 class="title-style">Strategy</h3>
 							<p class="description">
 								Our goal is to identify the business problem to walk away with
 								the perfect and creative solution.
 							</p>
 						</li>
-						<li class="item">
+						<li class="strong-side">
+							<div class="icon-bg">
+								<svg class="strong-side-icon" width="64" height="64">
+									<use href="./images/icons.svg#icon-clock-1"></use>
+								</svg>
+							</div>
 							<h3 class="title-style">Punctuality</h3>
 							<p class="description">
 								Bring the key message to the brand's audience for the best price
@@ -78,7 +88,12 @@
 							</p>
 						</li>
 
-						<li class="item">
+						<li class="strong-side">
+							<div class="icon-bg">
+								<svg class="strong-side-icon" width="64" height="64">
+									<use href="./images/icons.svg#icon-diagram-1"></use>
+								</svg>
+							</div>
 							<h3 class="title-style">Diligence</h3>
 							<p class="description">
 								Research and confirm brands that present the strongest digital
@@ -86,7 +101,12 @@
 							</p>
 						</li>
 
-						<li class="item">
+						<li class="strong-side">
+							<div class="icon-bg">
+								<svg class="strong-side-icon" width="64" height="64">
+									<use href="./images/icons.svg#icon-astronaut-1"></use>
+								</svg>
+							</div>
 							<h3 class="title-style">Technologies</h3>
 							<p class="description">
 								Design practice focused on digital experiences. We bring forth a
@@ -140,6 +160,36 @@
 							<div class="team">
 								<h3 class="team-name">Mark Guerrero</h3>
 								<p class="team-name-description">Product Designer</p>
+								<ul class="social-links">
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href=""
+											><svg class="social-links-action" width="16" height="16">
+												<use
+													href="./images/icons.svg#icon-twitter-1"></use></svg
+										></a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="item mark">
@@ -152,6 +202,36 @@
 							<div class="team">
 								<h3 class="team-name">Tom Ford</h3>
 								<p class="team-name-description">Frontend Developer</p>
+								<ul class="social-links">
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href=""
+											><svg class="social-links-action" width="16" height="16">
+												<use
+													href="./images/icons.svg#icon-twitter-1"></use></svg
+										></a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="item mark">
@@ -164,6 +244,36 @@
 							<div class="team">
 								<h3 class="team-name">Camila Garcia</h3>
 								<p class="team-name-description">Marketing</p>
+								<ul class="social-links">
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href=""
+											><svg class="social-links-action" width="16" height="16">
+												<use
+													href="./images/icons.svg#icon-twitter-1"></use></svg
+										></a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="item mark">
@@ -176,7 +286,80 @@
 							<div class="team">
 								<h3 class="team-name">Daniel Wilson</h3>
 								<p class="team-name-description">UI Designer</p>
+								<ul class="social-links">
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href=""
+											><svg class="social-links-action" width="16" height="16">
+												<use
+													href="./images/icons.svg#icon-twitter-1"></use></svg
+										></a>
+									</li>
+									<li class="social-link">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social-icon">
+										<a class="icon-bg" href="">
+											<svg class="social-links-action" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="section customers">
+				<div class="container">
+					<h2 class="fifth-section-headline">Customers</h2>
+					<ul class="clients">
+						<li class="client">
+							<a class="icon-bg" href=""
+								><svg class="svg-icon" width="104" height="56">
+									<use href="./images/icons.svg#icon-Logo"></use></svg
+							></a>
+						</li>
+						<li class="client">
+							<a class="icon-bg" href=""
+								><svg class="svg-icon" width="104" height="56">
+									<use href="./images/icons.svg#icon-Logo-3"></use></svg
+							></a>
+						</li>
+						<li class="client">
+							<a class="icon-bg" href=""
+								><svg class="svg-icon" width="104" height="56">
+									<use href="./images/icons.svg#icon-Logo-4"></use></svg
+							></a>
+						</li>
+						<li class="client">
+							<a class="icon-bg" href=""
+								><svg class="svg-icon" width="104" height="56">
+									<use href="./images/icons.svg#icon-group"></use></svg
+							></a>
+						</li>
+						<li class="client">
+							<a class="icon-bg" href=""
+								><svg class="svg-icon" width="104" height="56">
+									<use href="./images/icons.svg#icon-Logo-5"></use></svg
+							></a>
+						</li>
+						<li class="client">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="104" height="56">
+									<use href="./images/icons.svg#icon-Logo-6"></use></svg
+							></a>
 						</li>
 					</ul>
 				</div>
@@ -185,13 +368,45 @@
 
 		<footer class="footer-background">
 			<div class="container">
-				<a class="logo-footer" href="index.html"
-					><span class="logo">WEB</span>STUDIO</a
-				>
-				<p class="footer-text">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
+				<div class="footer-container-1">
+					<a class="logo-footer" href="index.html"
+						><span class="logo">WEB</span>STUDIO</a
+					>
+					<p class="footer-text">
+						Increase the flow of customers and sales for your business with
+						digital marketing & growth solutions.
+					</p>
+				</div>
+
+				<div class="footer-container-2">
+					<p class="social-media-footer">Social media</p>
+					<ul class="social-links">
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-instagram-2"></use></svg
+							></a>
+						</li>
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-twitter-1"></use></svg
+							></a>
+						</li>
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-facebook-1"></use></svg
+							></a>
+						</li>
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-linkedin-1"></use></svg
+							></a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
