--- a/portfolio.html
+++ b/portfolio.html
@@ -212,13 +212,45 @@
 		</main>
 		<footer class="footer-background">
 			<div class="container">
-				<a class="logo-footer" href="index.html"
-					><span class="logo">WEB</span>STUDIO</a
-				>
-				<p class="footer-text">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
+				<div class="footer-container-1">
+					<a class="logo-footer" href="index.html"
+						><span class="logo">WEB</span>STUDIO</a
+					>
+					<p class="footer-text">
+						Increase the flow of customers and sales for your business with
+						digital marketing & growth solutions.
+					</p>
+				</div>
+
+				<div class="footer-container-2">
+					<p class="social-media-footer">Social media</p>
+					<ul class="social-links">
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-instagram-2"></use></svg
+							></a>
+						</li>
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-twitter-1"></use></svg
+							></a>
+						</li>
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-facebook-1"></use></svg
+							></a>
+						</li>
+						<li class="social-link">
+							<a class="icon-bg" href="">
+								<svg class="svg-icon" width="24" height="24">
+									<use href="./images/icons.svg#icon-linkedin-1"></use></svg
+							></a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
